--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
   <!-- ====================================================================== -->
 
   <import file="maven-build.xml"/>
-  <property name="sonar.projectKey" value="org.sonarqube:sonarqube-scanner-ant" />
+  <property name="sonar.projectKey" value="roshambo" />
 	<property name="sonar.projectName" value="roshambo" />
 	<property name="sonar.projectVersion" value="1.0" />
 	<property name="sonar.sources" value="src" />
