--- a/build.xml
+++ b/build.xml
@@ -27,7 +27,7 @@
   <target name="sonar">
     <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
         <!-- Update the following line, or put the "sonarqube-ant-task-*.jar" file in your "$HOME/.ant/lib" folder -->
-        <classpath path="Workspace/sonar/ant/task/lib/sonarqube-ant-task-*.jar" />
+        <classpath path="$HOME/.ant/lib/sonarqube-ant-task-*.jar" />
     </taskdef>
  
     <!-- Execute SonarScanner for Ant Analysis -->
