--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,8 @@
   <!-- ====================================================================== -->
   <!-- Help target                                                            -->
   <!-- ====================================================================== -->
-
+ <target name="help">
+    <echo message="Please run: $ant -projecthelp"/>
+  </target>
   
 </project>
