--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,21 @@
   <!-- Import maven-build.xml into the current project                        -->
   <!-- ====================================================================== -->
 
- <import file="maven-build.xml"/>
+<project name="My Project" default="all" basedir="." xmlns:sonar="antlib:org.sonar.ant">
+...
+  
+<!-- Define the SonarQube global properties (the most usual way is to pass these properties via the command line) -->
+<property name="sonar.host.url" value="http://localhost:9000" />
+ 
+...
+  
+<!-- Define the SonarQube project properties -->
+<property name="sonar.projectKey" value="org.sonarqube:sonarqube-scanner-ant" />
+<property name="sonar.projectName" value="Example of SonarScanner for Ant Usage" />
+<property name="sonar.projectVersion" value="1.0" />
+<property name="sonar.sources" value="src" />
+<property name="sonar.java.binaries" value="build" />
+<property name="sonar.java.libraries" value="lib/*.jar" />
   
   <!-- ====================================================================== -->
   <!-- Help target                                                            -->
