--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,4 @@
-   
-  <?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <project name="rps-ant" default="all" basedir="." xmlns:sonar="antlib:org.sonar.ant">
 
   <property name="src.dir" value="src" />
