--- a/build.xml
+++ b/build.xml
@@ -31,7 +31,7 @@
 	
   <target name="sonar">
     <!-- Import Sonar Ant tasks -->
-    <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
+    <taskdef uri="antlib:org.sonar.ant" resource="antlib.xml">
       <classpath path="../../target/sonar-ant-task.jar" />
     </taskdef>
 
