--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
   </target>
 
   <!-- Define Sonar Properties -->
-  <property name="sonar.projectKey" value="org.sonar.ant.tests:java-version" />
+  <property name="sonar.projectKey" value="rps-ant" />
   <property name="sonar.projectName" value="rps-ant" />
   <property name="sonar.projectVersion" value="0.1-SNAPSHOT" />
   <property name="sonar.sources" value="${src.dir}" />
